JWT authentication with registration, email verification and password reset